# perkle

./: .gitignore  AGENTS.md  README.md  deploy.sh  docker-compose.yml
backend/: .dockerignore  Dockerfile  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 9f4a0d2a1b4c_add_refresh_sessions.py  f3495c7f2d0f_initial_schema.py
backend/app/: __init__.py  config.py  database.py  main.py
backend/app/api/: auth.py  benefits.py  cards.py  deps.py  notifications.py  transactions.py
backend/app/configs/cards/: amex-gold.yaml  amex-platinum.yaml  chase-sapphire-reserve.yaml  venture-x.yaml
backend/app/models/: __init__.py  auth.py  benefit.py  card.py  notification.py  transaction.py  user.py
backend/app/schemas/: auth.py  benefit.py  card.py  transaction.py
backend/app/services/: benefit_detector.py  benefit_periods.py  card_config_loader.py  csv_parser.py  notifications.py
backend/tests/: test_auth_sessions.py  test_benefit_detector.py  test_security_config.py  test_sqlcipher_config.py
docs/: ACCESS_CONTROL_POLICY.md  ACCESS_CONTROL_POLICY.txt  DESIGN.md  FUTURE_IMPROVEMENTS.md  GETTING_STARTED.md  PRD.md  PRIVACY_POLICY.md  TESTING_NOTES.md  sqlcipher-plan.md
docs/policies/: ACCESS_CONTROL_POLICY.md  ACCESS_CONTROL_POLICY.txt  DATA_RETENTION_AND_DELETION_SOP.txt  INFORMATION_SECURITY_POLICY.md  PRIVACY_POLICY.txt
frontend/: Dockerfile  nginx.conf  package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/components/: ProtectedRoute.tsx
frontend/src/context/: AuthContext.tsx
frontend/src/lib/: api.ts
(+6 files in other folders)
